--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Download do Repositório
-        uses: actions/checkout@v3       # https://github.com/actions/checkout
+        uses: actions/checkout@v4       # https://github.com/actions/checkout
         with:
           fetch-depth: 0
 
@@ -51,7 +51,7 @@ jobs:
 
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@v3 # https://github.com/actions/checkout
+        uses: actions/checkout@v4 # https://github.com/actions/checkout
 
       - name: Auth GCP
         uses: 'google-github-actions/auth@v1' # https://github.com/google-github-actions/auth
@@ -64,7 +64,7 @@ jobs:
         with:
           service: ${{ vars.GOOGLE_MYAPP }}-homolog
           image:   ${{ vars.GOOGLE_ARTIFACT }}/${{ vars.GOOGLE_PROJECT_ID }}/${{ vars.GOOGLE_REPONAME }}/${{ vars.GOOGLE_MYAPP }}:latest
-          flags: '--allow-unauthenticated'
+          flags: '--allow-unauthenticated  --region us-west1'
 
       - name: Test Homolog
         run: 'curl "${{ steps.homolog-deploy.outputs.url }}"'
@@ -75,7 +75,7 @@ jobs:
 
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@v3 # https://github.com/actions/checkout
+        uses: actions/checkout@v4 # https://github.com/actions/checkout
 
       - name: Auth GCP
         uses: 'google-github-actions/auth@v1' # https://github.com/google-github-actions/auth
