--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -64,7 +64,7 @@ jobs:
         with:
           service: ${{ vars.GOOGLE_MYAPP }}-homolog
           image:   ${{ vars.GOOGLE_ARTIFACT }}/${{ vars.GOOGLE_PROJECT_ID }}/${{ vars.GOOGLE_REPONAME }}/${{ vars.GOOGLE_MYAPP }}:latest
-          flags: '--allow-unauthenticated  --region us-west1'
+          flags: '--allow-unauthenticated'
 
       - name: Test Homolog
         run: 'curl "${{ steps.homolog-deploy.outputs.url }}"'
